2003-02-24 11:25  jtwilley

	* interface.c: changed timeouts to 100ms from 100us

2003-02-13  kg4ijb@sourceforge.net

	* bootstrap.sh - routine to rebuild autostuff environment

2003-02-13  kg4ijb@sourceforge.net

	* Removed old configure files and added new ac
    * Removed files that are generated locally

2003-02-02 23:16  jtwilley

        * COPYING: made example Y2K-compliant
	* acinclude.m4, config.guess, config.sub, missing, 
	  mkinstalldirs: updated to work with autoconf 2.53

2003-02-01 20:30  jtwilley

	* db.c: added support for direct stations
	* db.h: added timeout variable for direct stations

2002-01-19 21:12  kg4ijb

        * Makefile.in, aclocal.m4, configure, m4/Makefile.in,
        src/callpass/Makefile.in: rebuilt

2002-01-19 21:08  kg4ijb

        * src/main.c: commented out code to center map on left mouse click
        -- okay let's try it

2002-01-19 21:07  kg4ijb

        * src/: Makefile.am, Makefile.in: distcheck quite

2002-01-19 21:05  kg4ijb

        * config/Makefile.am, config/Makefile.in, help/Makefile.am,
        help/Makefile.in: extra_dist

2002-01-18 15:10  we7u

        * src/maps.c: Getting rid of another compiler warning under Solaris
        7.0.  The compiler thought that variables like f_NW_x_bounding
        weren't getting set in some cases.  Changed the logic around so the
        compiler can figure it out.

2002-01-18 15:05  we7u

        * src/db.c: Tweaks to get rid of more compiler warnings under
        Solaris 7.0

2002-01-17 18:36  we7u

        * src/messages.c: Fix for incoming message causing segfault on
        Solaris.

2002-01-17 15:57  we7u

        * configure, configure.in: Added more clear warnings about
        operating systems that Xastir doesn't fully support yet.

2002-01-17 15:18  we7u

        * README.1ST: A few small grammatical tweaks.

2002-01-17 15:05  we7u

        * README.1ST: FreeBSD note changes by Jack Twilley.

2002-01-17 13:59  we7u
